@startuml Decorator Pattern (Validation Pipeline)

skinparam monochrome false
skinparam shadowing false

interface ILosslessAudioValidator {
    + ValidateAsync(context, ct): Task<ValidationResult>
}

class PassthroughValidator <<ConcreteComponent>> {
    + ValidateAsync(): returns Valid
}

abstract class AudioValidatorDecorator <<Decorator>> {
    # Inner: ILosslessAudioValidator
}

class ExtensionValidatorDecorator
class MimeValidatorDecorator
class SpectralValidatorDecorator {
    - _audioProcessor: IAudioProcessor
    - _logger: ILogger
    + ValidateAsync(): Performs FFT scan and logs result
}

ILosslessAudioValidator <|.. PassthroughValidator
ILosslessAudioValidator <|.. AudioValidatorDecorator
AudioValidatorDecorator o-- ILosslessAudioValidator
AudioValidatorDecorator <|-- ExtensionValidatorDecorator
AudioValidatorDecorator <|-- MimeValidatorDecorator
AudioValidatorDecorator <|-- SpectralValidatorDecorator

note right of SpectralValidatorDecorator
  Uses IAudioProcessor to run 
  SpectralAnalysisEngine.
  Reports detailed results to console.
end note

@enduml
